Added custom css to make theme more consistent with ADS/HSDS sites

--- a/myst.yml
+++ b/myst.yml
@@ -34,5 +34,6 @@ site:
     logo: images/g2gp_signpost.png
     logo_text: Guides to Good Practice
     logo_url: https://guides.archaeologydataservice.ac.uk/
+    style: ./custom.css
   parts:
     footer: footer.md
